--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "run-p build:*",
     "build:components": "node scripts/build-components.js",
     "build:sass": "node-sass --output-style compressed --output ./dist/css ./src/sass",
-    "watch:sass": "node-sass-chokidar --include-path ./src/sass --watch --recursive --output-style compressed --output ./dist/css"
+    "dev": "run-p watch:*",
+    "watch:components": "live-server --watch=src",
+    "watch:sass": "node-sass-chokidar ./src/sass --watch --recursive --output-style compressed --output ./dist/css"
   },
   "author": "Matt Levy",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "@rollup/plugin-node-resolve": "9.0.0",
     "@rollup/plugin-replace": "2.3.3",
     "glob-all": "3.2.1",
+    "live-server": "1.2.1",
     "log-symbols": "4.0.0",
     "minify-html-literals": "1.3.2",
     "node-sass": "4.14.1",
