--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "build": "run-p build:*",
     "build:components": "node scripts/build-components.js",
-    "build:sass": "node-sass --output-style compressed --output ./dist/css ./src/sass",
+    "build:sass": "node-sass --output-style compressed --output ./dist/css src/css",
     "dev": "run-p watch:*",
     "watch:components": "live-server --watch=src",
-    "watch:sass": "node-sass-chokidar ./src/sass --watch --recursive --output-style compressed --output ./dist/css"
+    "watch:sass": "node-sass-chokidar src/css --watch --recursive --output-style compressed --output ./dist/css"
   },
   "author": "Matt Levy",
   "license": "ISC",
