--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "build": "run-p build:*",
     "build:components": "node scripts/build-components.js",
-    "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=dist-site",
+    "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=build",
     "build:sass": "node-sass --output-style compressed --output ./dist/css src/css",
     "dev": "run-p watch:*",
     "watch:components": "live-server --watch=src",
-    "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=dist-site --serve",
+    "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=build --serve",
     "watch:sass": "node-sass-chokidar src/css --watch --recursive --output-style compressed --output ./dist/css"
   },
   "author": "Matt Levy",
