--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=build",
     "build:sass": "node-sass --output-style compressed --output ./dist/css src/css",
     "dev": "run-p watch:*",
-    "watch:components": "live-server --watch=src",
+    "watch:components": "live-server --watch=src --port=8888",
     "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=build --serve",
     "watch:sass": "node-sass-chokidar src/css --watch --recursive --output-style compressed --output ./dist/css"
   },
