--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-replace": "2.3.4",
     "cross-env": "7.0.2",
+    "eleventy-plugin-toc": "1.1.0",
     "glob-all": "3.2.1",
     "live-server": "1.2.1",
     "log-symbols": "4.0.0",
+    "markdown-it-anchor": "6.0.0",
+    "markdown-it-emoji": "2.0.0",
+    "markdown-it-table-of-contents": "0.4.4",
+    "markdown-to-txt": "1.0.1",
     "minify-html-literals": "1.3.2",
     "node-sass": "4.14.1",
     "node-sass-chokidar": "1.5.0",
