--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
+    "@11ty/eleventy-navigation": "0.1.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "@rollup/plugin-commonjs": "16.0.0",
     "@rollup/plugin-node-resolve": "10.0.0",
