--- a/package.json
+++ b/package.json
@@ -21,25 +21,27 @@
     "@11ty/eleventy": "0.11.1",
     "@11ty/eleventy-navigation": "0.1.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-    "@rollup/plugin-commonjs": "16.0.0",
-    "@rollup/plugin-node-resolve": "10.0.0",
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-node-resolve": "11.0.1",
     "@rollup/plugin-replace": "2.3.4",
-    "cross-env": "7.0.2",
+    "cross-env": "7.0.3",
     "eleventy-plugin-toc": "1.1.0",
     "glob-all": "3.2.1",
     "live-server": "1.2.1",
     "log-symbols": "4.0.0",
-    "markdown-it-anchor": "6.0.0",
+    "markdown-it": "12.0.4",
+    "markdown-it-anchor": "6.0.1",
     "markdown-it-emoji": "2.0.0",
-    "markdown-it-table-of-contents": "0.4.4",
+    "markdown-it-table-of-contents": "0.5.1",
     "markdown-to-txt": "1.0.1",
     "minify-html-literals": "1.3.2",
-    "node-sass": "4.14.1",
+    "node-sass": "5.0.0",
     "node-sass-chokidar": "1.5.0",
     "npm-run-all": "4.1.5",
-    "rollup": "2.32.1",
+    "rollup": "2.35.1",
     "rollup-plugin-minify-html-literals": "1.2.5",
     "rollup-plugin-terser": "7.0.2",
-    "standard": "16.0.0"
+    "slugify": "1.4.6",
+    "standard": "16.0.3"
   }
 }
