--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ficusjs-components",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.0",
   "description": "A library of UI components built for FicusJS ",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
     "build": "run-p build:*",
     "build:components": "node scripts/build-components.js",
+    "build:dist": "node scripts/build-components.js --output-dir=dist",
     "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=build",
     "dev": "run-p watch:*",
     "watch:components": "live-server --watch=src --port=8888 --no-browser --cors src",
@@ -20,10 +21,11 @@
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
     "@11ty/eleventy-navigation": "0.1.6",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.4",
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-node-resolve": "11.0.1",
     "@rollup/plugin-replace": "2.3.4",
+    "clean-css-cli": "4.3.0",
     "cross-env": "7.0.3",
     "eleventy-plugin-toc": "1.1.0",
     "glob-all": "3.2.1",
@@ -42,6 +44,7 @@
     "rollup-plugin-minify-html-literals": "1.2.5",
     "rollup-plugin-terser": "7.0.2",
     "slugify": "1.4.6",
-    "standard": "16.0.3"
+    "standard": "16.0.3",
+    "yargs": "16.2.0"
   }
 }
