--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "build": "run-p build:*",
     "build:components": "node scripts/build-components.js",
-    "build:dist": "node scripts/build-components.js --output-dir=dist",
+    "build:css": "node scripts/build-css.js",
+    "build:dist": "run-p build:dist:*",
+    "build:dist:js": "node scripts/build-components.js --output-dir=dist",
+    "build:dist:css": "node scripts/build-css.js --output-dir=dist",
     "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=build",
     "dev": "run-p watch:*",
     "watch:components": "live-server --watch=src --port=8888 --no-browser --cors src",
@@ -25,7 +28,7 @@
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-node-resolve": "11.0.1",
     "@rollup/plugin-replace": "2.3.4",
-    "clean-css-cli": "4.3.0",
+    "clean-css": "4.2.3",
     "cross-env": "7.0.3",
     "eleventy-plugin-toc": "1.1.0",
     "glob-all": "3.2.1",
@@ -37,6 +40,7 @@
     "markdown-it-table-of-contents": "0.5.1",
     "markdown-to-txt": "1.0.1",
     "minify-html-literals": "1.3.2",
+    "mkdirp": "1.0.4",
     "node-sass": "5.0.0",
     "node-sass-chokidar": "1.5.0",
     "npm-run-all": "4.1.5",
