--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "dev": "run-p watch:*",
     "watch:components": "live-server --watch=src --port=8888 --no-browser --cors src",
     "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=tmp --serve",
-    "watch:theme-sass": "node-sass-chokidar ./src/scss --watch --recursive --output-style compressed --output ./src/css",
-    "watch:docs-sass": "node-sass-chokidar ./src/assets/scss --watch --recursive --output-style compressed --output ./src/css",
+    "sass": "run-s sass:compile",
+    "sass:compile": "run-p sass:theme sass:utilities sass:docs",
+    "sass:theme": "sass src/scss/ficus-globals.scss src/css/ficus-globals.css",
+    "sass:utilities": "sass src/scss/ficus-utilities.scss src/css/ficus-utilities.css",
+    "sass:docs": "sass src/assets/scss/ficus-docs.scss src/css/ficus-docs.css",
+    
+    "watch:sass:compile": "chokidar \"src/**/*.scss\" -c \"run-p sass\"",
+    "watch:sass": "run-p watch:sass:*",
     "lint": "run-p lint:*",
     "lint:js": "standard \"src/**/*.js\"",
     "lint:sass": "stylelint \"src/scss/**/*.scss\""
@@ -34,6 +40,7 @@
     "@rollup/plugin-replace": "2.3.4",
     "clean-css": "4.2.3",
     "cross-env": "7.0.3",
+    "chokidar-cli": "2.1.0",
     "eleventy-plugin-toc": "1.1.0",
     "glob-all": "3.2.1",
     "live-server": "1.2.1",
@@ -45,13 +52,13 @@
     "markdown-to-txt": "1.0.1",
     "minify-html-literals": "1.3.2",
     "mkdirp": "1.0.4",
-    "node-sass": "5.0.0",
-    "node-sass-chokidar": "1.5.0",
     "npm-run-all": "4.1.5",
+    "postcss-cli": "8.3.1",
     "rimraf": "3.0.2",
     "rollup": "2.38.0",
     "rollup-plugin-minify-html-literals": "1.2.5",
     "rollup-plugin-terser": "7.0.2",
+    "sass": "1.32.5",
     "slugify": "1.4.6",
     "standard": "16.0.3",
     "stylelint": "13.9.0",
