feat: add styles package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ficusjs-components",
+  "name": "@ficusjs/components",
   "version": "1.0.0-alpha.1",
   "description": "A library of UI components built for FicusJS ",
   "main": "dist/index.js",
@@ -13,15 +13,13 @@
     "build:dist:js": "node scripts/build-components.js --output-dir=dist",
     "build:dist:css": "node scripts/build-css.js --output-dir=dist",
     "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=build",
-    "predev": "rimraf tmp",
+    "predev": "rimraf tmp && npm run sass",
     "dev": "run-p watch:*",
     "watch:components": "live-server --watch=src --port=8888 --no-browser --cors src",
     "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=tmp --serve",
     "sass": "run-s sass:compile",
-    "sass:compile": "run-p sass:theme sass:utilities sass:docs",
-    "sass:theme": "sass src/scss/ficus-globals.scss src/css/ficus-globals.css",
-    "sass:utilities": "sass src/scss/ficus-utilities.scss src/css/ficus-utilities.css",
-    "sass:docs": "sass src/assets/scss/ficus-docs.scss src/css/ficus-docs.css",
+    "sass:compile": "run-p sass:docs",
+    "sass:docs": "sass src/scss/ficus-docs.scss tmp/css/ficus-docs.css",
     "watch:sass:compile": "chokidar \"src/**/*.scss\" -c \"run-p sass\"",
     "watch:sass": "run-p watch:sass:*",
     "lint": "run-p lint:*",
