feat: move css to individual sass folders

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ficusjs/components",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "A library of UI components built for FicusJS ",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -9,19 +9,20 @@
     "build": "run-p build:*",
     "build:components": "node scripts/build-components.js",
     "build:css": "node scripts/build-css.js",
+    "build:sass": "node scripts/build-sass.js",
     "build:dist": "run-p build:dist:*",
     "build:dist:js": "node scripts/build-components.js --output-dir=dist",
     "build:dist:css": "node scripts/build-css.js --output-dir=dist",
-    "build:docs": "cross-env NODE_ENV=production eleventy --input=src --output=build",
+    "build:docs": "npm run sass && cross-env NODE_ENV=production eleventy --input=src --output=build",
     "predev": "rimraf tmp && npm run sass",
     "dev": "run-p watch:*",
-    "watch:components": "live-server --watch=src --port=8888 --no-browser --cors src",
+    "watch:src": "live-server --watch=src --port=8888 --no-browser --cors src",
+    "watch:tmp": "live-server --watch=tmp --port=8889 --no-browser --cors tmp",
     "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=tmp --serve",
-    "sass": "run-s sass:compile",
-    "sass:compile": "run-p sass:docs",
-    "sass:docs": "sass src/scss/ficus-docs.scss tmp/css/ficus-docs.css",
-    "watch:sass:compile": "chokidar \"src/**/*.scss\" -c \"run-p sass\"",
-    "watch:sass": "run-p watch:sass:*",
+    "watch:sass": "chokidar \"src/**/*.scss\" -c \"run-p sass\"",
+    "sass": "run-p sass:tmp:*",
+    "sass:tmp:components": "node scripts/build-sass.js --output-dir=tmp",
+    "sass:tmp:docs": "sass src/scss/ficus-docs.scss tmp/css/ficus-docs.css",
     "lint": "run-p lint:*",
     "lint:js": "standard \"src/**/*.js\"",
     "lint:sass": "stylelint \"src/scss/**/*.scss\""
