--- a/package.json
+++ b/package.json
@@ -28,16 +28,27 @@
     "lint:js": "standard \"src/**/*.js\"",
     "lint:sass": "stylelint \"src/scss/**/*.scss\""
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ficusjs/ficusjs-components.git"
+  },
+  "keywords": [
+    "ficusjs",
+    "frontend",
+    "web-components",
+    "ui-toolkit",
+    "custom-elements"
+  ],
   "author": "Matt Levy",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
     "@11ty/eleventy-navigation": "0.1.6",
-    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.6",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.1.0",
     "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.1.1",
-    "@rollup/plugin-replace": "2.3.4",
-    "clean-css": "5.0.1",
+    "@rollup/plugin-node-resolve": "11.2.0",
+    "@rollup/plugin-replace": "2.4.1",
+    "clean-css": "5.1.1",
     "cross-env": "7.0.3",
     "chokidar-cli": "2.1.0",
     "eleventy-plugin-toc": "1.1.0",
@@ -45,7 +56,7 @@
     "live-server": "1.2.1",
     "log-symbols": "4.0.0",
     "markdown-it": "12.0.4",
-    "markdown-it-anchor": "7.0.1",
+    "markdown-it-anchor": "7.1.0",
     "markdown-it-emoji": "2.0.0",
     "markdown-it-table-of-contents": "0.5.2",
     "markdown-to-txt": "1.0.1",
@@ -54,13 +65,18 @@
     "npm-run-all": "4.1.5",
     "postcss-cli": "8.3.1",
     "rimraf": "3.0.2",
-    "rollup": "2.38.4",
+    "rollup": "2.40.0",
     "rollup-plugin-minify-html-literals": "1.2.5",
     "rollup-plugin-terser": "7.0.2",
-    "sass": "1.32.6",
-    "slugify": "1.4.6",
+    "sass": "1.32.8",
+    "slugify": "1.4.7",
     "standard": "16.0.3",
-    "stylelint": "13.9.0",
+    "stylelint": "13.12.0",
     "yargs": "16.2.0"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/components/loader/index.js"
+    }
   }
 }
