--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "slugify": "1.4.7",
     "standard": "16.0.3",
     "stylelint": "13.12.0",
+    "stylelint-config-standard": "21.0.0",
+    "stylelint-scss": "3.19.0",
     "yargs": "16.2.0"
   },
   "exports": {
