feat: update package.json

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "custom-elements"
   ],
   "author": "Matt Levy",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "0.12.1",
     "@11ty/eleventy-navigation": "0.1.6",
