feat: uplift npm packages

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@ficusjs/components",
-  "version": "1.0.0-alpha.22",
+  "version": "1.0.0-alpha.23",
   "description": "A library of UI components built for FicusJS ",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist build",
     "build": "run-p build:*",
-    "build:components": "node scripts/build-components.js",
-    "build:css": "node scripts/build-css.js",
-    "build:sass": "node scripts/build-sass.js",
-    "build:sass-dist": "node scripts/build-sass.js --output-dir=dist",
+    "build:components": "node scripts/build-components.cjs",
+    "build:css": "node scripts/build-css.cjs",
+    "build:sass": "node scripts/build-sass.cjs",
+    "build:sass-dist": "node scripts/build-sass.cjs --output-dir=dist",
     "build:dist": "run-p build:dist:*",
-    "build:dist:js": "node scripts/build-components.js --output-dir=dist",
-    "build:dist:css": "node scripts/build-css.js --output-dir=dist",
+    "build:dist:js": "node scripts/build-components.cjs --output-dir=dist",
+    "build:dist:css": "node scripts/build-css.cjs --output-dir=dist",
     "build:docs": "npm run sass && cross-env NODE_ENV=production eleventy --input=src --output=build",
     "predev": "rimraf tmp && npm run sass",
     "dev": "run-p watch:*",
@@ -22,7 +22,7 @@
     "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=tmp --serve",
     "watch:sass": "chokidar \"src/**/*.scss\" -c \"run-p sass\"",
     "sass": "run-p sass:tmp:*",
-    "sass:tmp:components": "node scripts/build-sass.js --output-dir=tmp",
+    "sass:tmp:components": "node scripts/build-sass.cjs --output-dir=tmp",
     "lint": "run-p lint:*",
     "lint:js": "standard \"src/**/*.js\"",
     "lint:sass": "stylelint \"src/scss/**/*.scss\""
@@ -43,9 +43,9 @@
   "devDependencies": {
     "@11ty/eleventy": "0.12.1",
     "@11ty/eleventy-navigation": "0.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "3.1.0",
-    "@ficusjs/styles": "1.0.0-alpha.30",
-    "@rollup/plugin-commonjs": "18.1.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.1.1",
+    "@ficusjs/styles": "1.0.0-alpha.31",
+    "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
     "chokidar-cli": "2.1.0",
@@ -66,11 +66,11 @@
     "npm-run-all": "4.1.5",
     "postcss-cli": "8.3.1",
     "rimraf": "3.0.2",
-    "rollup": "2.47.0",
+    "rollup": "2.50.6",
     "rollup-plugin-minify-html-literals": "1.2.6",
     "rollup-plugin-terser": "7.0.2",
-    "sass": "1.32.12",
-    "slugify": "1.5.2",
+    "sass": "1.34.1",
+    "slugify": "1.5.3",
     "standard": "16.0.3",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
