--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "build:dist:js": "node scripts/build-components.cjs --output-dir=dist",
     "build:dist:css": "node scripts/build-css.cjs --output-dir=dist",
     "build:docs": "npm run sass && cross-env NODE_ENV=production eleventy --input=src --output=build",
+    "copy:favicon": "ncp src/assets/img/favicon.ico build/favicon.ico",
+    "copy:apple-touch-icon": "ncp src/assets/img/apple-touch-icon.png build/apple-touch-icon.png",
+    "copy:manifest": "ncp src/ficus-components.webmanifest build/ficus-components.webmanifest",
+    "postbuild": "run-s copy:* workbox:gen",
     "predev": "rimraf tmp && npm run sass",
     "dev": "run-p watch:*",
-    "watch:src": "live-server --watch=src --port=8888 --no-browser --cors src",
-    "watch:tmp": "live-server --watch=tmp --port=8889 --no-browser --cors tmp",
     "watch:docs": "cross-env NODE_ENV=development eleventy --input=src --output=tmp --serve",
+    "tmp:docs": "cross-env NODE_ENV=development eleventy --input=src --output=tmp",
     "watch:sass": "chokidar \"src/**/*.scss\" -c \"run-p sass\"",
     "sass": "run-p sass:tmp:*",
     "sass:tmp:components": "node scripts/build-sass.cjs --output-dir=tmp",
     "lint": "run-p lint:*",
     "lint:js": "standard \"src/**/*.js\"",
-    "lint:sass": "stylelint \"src/scss/**/*.scss\""
+    "lint:sass": "stylelint \"src/scss/**/*.scss\"",
+    "workbox:gen": "workbox generateSW workbox-config.js"
   },
   "repository": {
     "type": "git",
@@ -63,6 +67,7 @@
     "markdown-to-txt": "1.0.1",
     "minify-html-literals": "1.3.5",
     "mkdirp": "1.0.4",
+    "ncp": "2.0.0",
     "npm-run-all": "4.1.5",
     "postcss-cli": "9.0.0",
     "rimraf": "3.0.2",
@@ -75,6 +80,7 @@
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "stylelint-scss": "3.21.0",
+    "workbox-cli": "6.3.0",
     "yargs": "17.2.1"
   },
   "exports": {
